--- a/package.json
+++ b/package.json
@@ -62,27 +62,26 @@
   },
   "peerDependencies": {
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
-  },
-  "dependencies": {
-    "c3": "git+https://github.com/masayuki0812/c3.git",
-    "classnames": "^2.2.3",
-    "intl": "^1.0.1",
-    "intl-locales-supported": "^1.0.0",
-    "ismobilejs": "^0.3.9",
-    "isomorphic-fetch": "^2.2.0",
-    "jquery-param": "^0.2.0",
-    "nouislider": "^8.2.1",
-    "query-string": "^3.0.0",
-    "ramda": "^0.19.1",
-    "react-intl": "^2.0.0-beta-2",
-    "react-list": "^0.7.12",
-    "react-modal": "^0.6.1",
-    "react-mq": "github:rmdort/react-mq",
-    "react-onclickoutside": "^4.5.0",
+    "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "c3": "git+https://github.com/masayuki0812/c3.git",
+    "classnames": "^2.2.3",
+    "nouislider": "^8.2.1",
+    "react-modal": "^0.6.1",
+    "react-mq": "github:rmdort/react-mq",
+    "react-onclickoutside": "^4.5.0",
+    "react-list": "^0.7.12"
+  },
+  "dependencies": {        
+    "intl": "^1.0.1",
+    "intl-locales-supported": "^1.0.0",
+    "ismobilejs": "^0.3.9",    
+    "jquery-param": "^0.2.0",    
+    "query-string": "^3.0.0",
+    "ramda": "^0.19.1",
+    "react-intl": "^2.0.0-beta-2"
   }
 }
