--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dist lib",
     "build:lib": "BABEL_ENV=production babel src --out-dir lib",
-    "postinstall": "npm run build:lib",
+    "postinstall": "BABEL_ENV=production babel src --out-dir lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "build:umd": "NODE_ENV=production webpack src/index.js dist/olasearch.js --config webpack.config.development.js",
     "build:umd:min": "NODE_ENV=production webpack --config webpack.config.production.js",
