--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist lib",
-    "build:lib": "BABEL_ENV=production babel src --out-dir lib",
+    "build:lib": "NODE_ENV=production BABEL_ENV=production babel src --out-dir lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "build:umd": "NODE_ENV=production webpack src/index.js dist/olasearch.js --config webpack.config.development.js",
     "build:umd:min": "NODE_ENV=production webpack --config webpack.config.production.js",
@@ -33,32 +33,30 @@
   },
   "homepage": "https://github.com/olasearch/core",
   "devDependencies": {
-    "babel": "^5.5.8",
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^5.1.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "babel-runtime": "^6.3.19",
-    "css-loader": "^0.23.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^2.3.0",
-    "expect": "^1.13.4",
-    "express": "^4.13.3",
-    "file-loader": "^0.8.5",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.3.15",
+    "babel-eslint": "^5.0.0-beta4",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",    
+    "babel-preset-react-hmre": "^1.0.0",
+    "expect": "^1.13.4",    
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
-    "react-addons-test-utils": "^0.14.6",
-    "react-hot-loader": "^1.3.0",
-    "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.1",
-    "redux-devtools": "^3.0.1",
+    "react-addons-test-utils": "^0.14.6",    
     "rimraf": "^2.5.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-hot-middleware": "^2.0.0"
+    "cross-env": "^1.0.6",
+    "eslint": "^1.10.3",
+    "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-react": "^3.11.3",
+    "eventsource-polyfill": "^0.9.6",
+    "expose-loader": "^0.7.1",
+    "express": "^4.13.3",
+    "rimraf": "^2.4.3",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "peerDependencies": {
     "react": "^0.14.6",
