--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "react": ">= 0.14.0 < 0.15.0",
+    "react-dom": ">= 0.14.0 < 0.15.0",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",    
     "redux-thunk": "^1.0.3"        
