--- a/package.json
+++ b/package.json
@@ -39,20 +39,25 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",    
     "babel-preset-react-hmre": "^1.0.0",
-    "expect": "^1.13.4",    
-    "jsdom": "^8.0.2",
-    "mocha": "^2.3.4",
-    "react-addons-test-utils": "^0.14.6",    
-    "rimraf": "^2.5.0",
+    "babel-preset-stage-0": "^6.3.13",
     "cross-env": "^1.0.6",
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "eventsource-polyfill": "^0.9.6",
+    "expect": "^1.13.4",
     "expose-loader": "^0.7.1",
-    "express": "^4.13.3",    
+    "express": "^4.13.3",
+    "jsdom": "^8.0.2",
+    "mocha": "^2.3.4",
+    "react": "^0.14.7",
+    "react-dom": ">= 0.14.0 < 0.15.0",
+    "react-addons-test-utils": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3",
+    "rimraf": "^2.5.0",
     "webpack": "^2.0.6-beta",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
@@ -61,14 +66,14 @@
     "react": ">= 0.14.0 < 0.15.0",
     "react-dom": ">= 0.14.0 < 0.15.0",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.5",    
-    "redux-thunk": "^1.0.3"        
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3"
   },
-  "dependencies": {        
+  "dependencies": {
     "intl": "^1.0.1",
     "intl-locales-supported": "^1.0.0",
-    "ismobilejs": "^0.3.9",    
-    "jquery-param": "^0.2.0",    
+    "ismobilejs": "^0.3.9",
+    "jquery-param": "^0.2.0",
     "query-string": "^3.0.0",
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-beta-2",
