--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
     "jsdom": "^8.0.2",
-    "mocha": "^2.3.4",    
+    "mocha": "^2.3.4",
     "rimraf": "^2.5.0",
     "webpack": "^2.0.6-beta",
     "webpack-dev-middleware": "^1.4.0",
@@ -64,17 +64,18 @@
     "redux-thunk": "^1.0.3"
   },
   "dependencies": {
+    "classnames": "^2.2.3",
+    "dom-scroll-into-view": "^1.0.1",
     "intl": "^1.0.1",
     "intl-locales-supported": "^1.0.0",
     "ismobilejs": "^0.3.9",
     "jquery-param": "^0.2.0",
+    "nouislider": "^8.2.1",
     "query-string": "^3.0.0",
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-beta-2",
-    "react-mq": "github:rmdort/react-mq",
-    "react-onclickoutside": "^4.5.0",
     "react-list": "^0.7.13",
-    "classnames": "^2.2.3",
-    "nouislider": "^8.2.1"
+    "react-mq": "github:rmdort/react-mq",
+    "react-onclickoutside": "^4.5.0"
   }
 }
