--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   },
   "homepage": "https://github.com/olasearch/core",
   "devDependencies": {
-    "babel-cli": "^6.4.5",
     "babel-core": "^6.3.15",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
+    "babel-plugin-transform-es3-property-literals": "^6.5.0",
+    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
@@ -64,6 +66,7 @@
     "redux-thunk": "^1.0.3"
   },
   "dependencies": {
+    "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
     "classnames": "^2.2.3",
     "dom-scroll-into-view": "^1.0.1",
     "intl": "^1.0.1",
