Removed react-mq dependency

--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "query-string": "^3.0.0",
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-beta-2",
-    "react-list": "^0.7.13",
-    "react-mq": "github:rmdort/react-mq",
-    "react-onclickoutside": "^4.5.0"
+    "react-list": "^0.7.13",    
+    "react-onclickoutside": "^4.5.0",
+    "react-responsive": "^1.1.1"
   }
 }
