--- a/package.json
+++ b/package.json
@@ -33,48 +33,48 @@
   },
   "homepage": "https://github.com/olasearch/core",
   "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.2.0",
+    "babel-core": "^6.6.4",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
-    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.5.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.6.0",
+    "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-preset-stage-0": "^6.3.13",
     "cross-env": "^1.0.6",
-    "eslint": "^1.10.3",
+    "eslint": "^2.2.0",
     "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint-plugin-react": "^4.1.0",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^1.13.4",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
-    "jsdom": "^8.0.2",
+    "jsdom": "^8.1.0",
     "mocha": "^2.3.4",
     "rimraf": "^2.5.0",
     "webpack": "^2.0.6-beta",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack-hot-middleware": "^2.9.1"
   },
   "peerDependencies": {
     "react": ">= 0.14.0 < 0.15.0",
     "react-dom": ">= 0.14.0 < 0.15.0",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
   },
-  "dependencies": {
-    "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
+  "dependencies": {    
     "classnames": "^2.2.3",
-    "dom-scroll-into-view": "^1.0.1",
+    "dom-scroll-into-view": "^1.1.0",
     "intl": "^1.0.1",
     "intl-locales-supported": "^1.0.0",
     "ismobilejs": "^0.3.9",
     "jquery-param": "^0.2.0",
     "nouislider": "^8.3.0",
-    "query-string": "^3.0.0",
+    "query-string": "^3.0.1",
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-beta-2",
     "react-list": "^0.7.13",    
