--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "nouislider": "^8.3.0",
     "query-string": "^3.0.1",
     "ramda": "^0.19.1",
-    "react-intl": "^2.0.0-beta-2",
+    "react-intl": "^2.0.0-rc-1",
     "react-list": "^0.7.13",    
     "react-onclickoutside": "^4.5.0",
     "react-responsive": "^1.1.1"
