--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   },
   "homepage": "https://github.com/olasearch/core",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.6.4",
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
+    "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.6.0",
-    "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
@@ -55,8 +56,8 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.3.4",
     "rimraf": "^2.5.0",
-    "webpack": "^2.0.6-beta",
-    "webpack-dev-middleware": "^1.4.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.9.1"
   },
   "peerDependencies": {
@@ -66,7 +67,7 @@
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
   },
-  "dependencies": {    
+  "dependencies": {
     "classnames": "^2.2.3",
     "dom-scroll-into-view": "^1.1.0",
     "intl": "^1.0.1",
@@ -77,7 +78,7 @@
     "query-string": "^3.0.1",
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-rc-1",
-    "react-list": "^0.7.13",    
+    "react-list": "^0.7.13",
     "react-onclickoutside": "^4.5.0",
     "react-responsive": "^1.1.1"
   }
