--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "peerDependencies": {
-    "react": "^0.12.0 || ^0.13.0 || ^0.14.0 || ^15.0.0-rc.1",
-    "react-dom": "^0.12.0 || ^0.13.0 || ^0.14.0 || ^15.0.0-rc.1",
+    "react": "^0.14.0 || ^15.0.0-rc.1",
+    "react-dom": "^0.14.0 || ^15.0.0-rc.1",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
