--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "test": "BABEL_ENV=production mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch"
   },
+  "engines" : { 
+    "node" : ">=0.12",
+    "npm": ">=3"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/olasearch/core"
