--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "node devServer.js",
     "lint": "eslint src",
     "test": "BABEL_ENV=production mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "standard": "standard src/components/FacetFilters/Boolean.js --verbose | snazzy"
   },
   "engines": {
     "node": ">=0.12",
