--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,9 @@
     "babel/no-await-in-loop": 1,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
+    "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
+    "react/wrap-multilines": 2,
     // "react/jsx-no-bind": 2
   },
   "plugins": [
