--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-rc.1",
-    "react-dom": "^0.14.0 || ^15.0.0-rc.1",
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
@@ -95,7 +95,7 @@
     "ramda": "^0.19.1",
     "react-intl": "^2.0.0-rc-1",
     "react-list": "^0.7.13",
-    "react-onclickoutside": "^4.5.0",
+    "react-onclickoutside": "^4.8.0",
     "react-responsive": "^1.1.1"
   }
 }
