--- a/package.json
+++ b/package.json
@@ -84,18 +84,17 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "dom-scroll-into-view": "^1.1.0",
-    "intl": "^1.0.1",
+    "dom-scroll-into-view": "^1.2.0",
+    "intl": "^1.1.0",
     "intl-locales-supported": "^1.0.0",
     "invariant": "^2.2.1",
-    "ismobilejs": "^0.3.9",
-    "jquery-param": "^0.2.0",
-    "nouislider": "^8.3.0",
+    "ismobilejs": "^0.4.0",
+    "nouislider": "^8.4.0",
     "query-string": "^4.1.0",
-    "ramda": "^0.19.1",
-    "react-intl": "^2.0.0-rc-1",
-    "react-list": "^0.7.13",
-    "react-onclickoutside": "^4.8.0",
-    "react-responsive": "^1.1.1"
+    "ramda": "^0.21.0",
+    "react-intl": "^2.0.1",
+    "react-list": "^0.7.18",
+    "react-onclickoutside": "^5.0.0",
+    "react-responsive": "^1.1.2"
   }
 }
