--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
     "react/wrap-multilines": 2,
-    // "react/jsx-no-bind": 2
+    "react/jsx-no-bind": 2
   },
   "plugins": [
     "babel",
