--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["transform-es3-member-expression-literals", "transform-es3-property-literals", "transform-object-set-prototype-of-to-assign", "ramda"],
+  "plugins": ["transform-es3-member-expression-literals", "transform-es3-property-literals", "transform-object-set-prototype-of-to-assign"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
