--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/olasearch/core"
+    "url": "https://bitbucket.org/olasearch/olasearch-core"
   },
   "keywords": [
     "olasearch"
   ],
-  "author": "Vinay M <vinay@olasearch.com> (http://github.com/rmdort)",
+  "author": "Vinay M <vinay@olasearch.com> (http://bitbucket.com/olasearch)",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/olasearch/core/issues"
@@ -45,32 +45,32 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.6.4",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
     "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
-    "babel-plugin-transform-es3-property-literals": "^6.5.0",
-    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-preset-stage-0": "^6.3.13",
-    "cross-env": "^1.0.6",
-    "eslint": "^2.9.0",
+    "cross-env": "^1.0.8",
+    "eslint": "^2.11.1",
     "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-react": "^5.1.1",
     "eventsource-polyfill": "^0.9.6",
-    "expect": "^1.13.4",
+    "expect": "^1.20.1",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
-    "jsdom": "^8.4.1",
-    "mocha": "^2.3.4",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
     "rimraf": "^2.5.0",
-    "snazzy": "^3.0.0",
-    "standard": "^6.0.8",
-    "webpack": "^1.12.2",
+    "snazzy": "^4.0.0",
+    "standard": "^7.1.1",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.9.1"
   },
@@ -82,18 +82,18 @@
     "redux-thunk": "^1.0.3"
   },
   "dependencies": {
-    "classnames": "^2.2.4",
+    "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.0",
-    "intl": "^1.1.0",
+    "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "invariant": "^2.2.1",
     "ismobilejs": "^0.4.0",
     "nouislider": "^8.5.1",
-    "query-string": "^4.1.0",
+    "query-string": "^4.2.0",
     "ramda": "^0.21.0",
     "react-intl": "^2.1.2",
     "react-list": "^0.7.18",
-    "react-onclickoutside": "^5.0.1",
+    "react-onclickoutside": "^5.2.0",
     "react-responsive": "^1.1.3"
   }
 }
