--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-ramda": "^1.1.3",
     "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
     "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
