--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.0",
+    "hoist-non-react-statics": "^1.1.0",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "invariant": "^2.2.1",
