Added persist Store in middleware

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "quotes": [2, "single"],
     "strict": [2, "never"],
     "babel/generator-star-spacing": 1,
-    "babel/new-cap": 1,
+    //"babel/new-cap": 1,
     "babel/object-shorthand": 1,
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
@@ -21,7 +21,8 @@
     "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
     "react/wrap-multilines": 2,
-    "react/jsx-no-bind": 2
+    //"react/jsx-no-bind": 2,
+    "react/prefer-stateless-function": 2
   },
   "plugins": [
     "babel",
