--- a/package.json
+++ b/package.json
@@ -5,15 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist lib",
-    "build:lib": "NODE_ENV=production BABEL_ENV=production babel src --out-dir lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
-    "build:umd": "NODE_ENV=production webpack src/index.js dist/olasearch.js --config webpack.config.development.js",
-    "build:umd:min": "NODE_ENV=production webpack --config webpack.config.production.js",
-    "build": "npm run clean && npm run build:lib && npm run build:umd:min",
-    "build:umd:demo": "NODE_ENV=production webpack --config webpack.config.demo.js",
-    "demo": "npm run build:umd:demo",
-    "publish": "npm run clean && npm run build:lib",
-    "start": "node devServer.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "lint": "eslint src",
     "test": "BABEL_ENV=production mocha test/actions/*.js --compilers js:babel-core/register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
@@ -53,6 +46,7 @@
     "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
     "babel-plugin-transform-es3-memeber-and-property-regenerator": "^1.0.2",
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-helper": "0.0.3",
     "babel-plugin-transform-object-set-prototype-of-to-assign": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
