--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "ramda": "^0.21.0",
     "react-list": "^0.7.20",
     "react-onclickoutside": "^5.3.2",
-    "react-responsive": "^1.1.4"
+    "react-responsive": "^1.1.4",
+    "redux-logger": "^2.6.1"
   }
 }
