Added logger decorator + More test

--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.9.0",
-    "cross-env": "^1.0.8",
+    "cross-env": "^2.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.0.1",
+    "eslint": "^3.1.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "eventsource-polyfill": "^0.9.6",
@@ -71,6 +71,8 @@
     "react": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.3",
     "snazzy": "^4.0.0",
     "standard": "^7.1.2",
