--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "eslint": "^3.2.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
-    "eventsource-polyfill": "^0.9.6",
     "expect": "^1.20.2",
     "expose-loader": "^0.7.1",
     "express": "^4.14.0",
@@ -75,10 +74,7 @@
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.4",
     "snazzy": "^4.0.0",
-    "standard": "^7.1.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "standard": "^7.1.2"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.1.0 < 16",
