--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
-image: node:4.2.2
+image: node:4.0.0
 
 before_script:
-    - npm install -g npm@3.x.x
-    - npm set progress=false
-    - npm install
+    - npm install -g npm@3.x.x --silence
+    - npm install --silence
 
 run_tests:
   script:
