--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-onclickoutside": "^5.3.3",
     "react-responsive": "^1.1.4",
     "redux-logger": "^2.6.1",
-    "xss": "^0.2.13"
+    "xss": "^0.2.13",
+    "xss-filters": "^1.2.7"
   }
 }
