--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
     "react": "^15.4.1",
+    "react-addons-perf": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
     "redux": "^3.6.0",
