--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.0",
     "flatpickr": "^2.3.7",
+    "google-map-react": "^0.22.3",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
     "ismobilejs": "^0.4.0",
