--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "BABEL_ENV=production mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
-    "standard": "standard --verbose | snazzy"
+    "standard": "standard --verbose --fix | snazzy"
   },
   "engines": {
     "node": ">=0.12",
@@ -47,24 +47,24 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
-    "babel-register": "^6.23.0",
+    "babel-register": "^6.24.0",
     "chokidar": "^1.6.1",
-    "cross-env": "^3.2.3",
+    "cross-env": "^3.2.4",
     "enzyme": "^2.7.1",
-    "eslint": "^3.17.0",
-    "eslint-plugin-babel": "^4.1.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint": "^3.18.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-react": "^6.10.3",
     "expect": "^1.20.2",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.0",
+    "express": "^4.15.2",
     "isparta": "^4.0.0",
-    "jsdom": "^9.11.0",
+    "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "react": "^15.4.2",
@@ -75,7 +75,7 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^6.0.0",
-    "standard": "^9.0.0"
+    "standard": "^9.0.2"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.1.0 < 16",
@@ -88,17 +88,17 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.0",
-    "flatpickr": "^2.4.3",
-    "google-map-react": "^0.22.3",
+    "flatpickr": "^2.4.6",
+    "google-map-react": "^0.23.0",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
-    "ismobilejs": "^0.4.0",
+    "ismobilejs": "^0.4.1",
     "nouislider": "^9.2.0",
     "query-string": "^4.3.2",
     "ramda": "^0.23.0",
-    "react-list": "^0.8.3",
-    "react-onclickoutside": "^5.9.0",
-    "react-responsive": "^1.2.6",
+    "react-list": "^0.8.4",
+    "react-onclickoutside": "^5.10.0",
+    "react-responsive": "^1.2.7",
     "redux-logger": "^2.8.2",
     "xss": "^0.3.3",
     "xss-filters": "^1.2.7"
