--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
-    "babel-register": "^6.24.0",
+    "babel-register": "^6.24.1",
     "chokidar": "^1.6.1",
-    "cross-env": "^3.2.4",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.18.0",
+    "cross-env": "^4.0.0",
+    "enzyme": "^2.8.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^6.10.3",
     "expect": "^1.20.2",
@@ -66,16 +66,17 @@
     "isparta": "^4.0.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
-    "nyc": "^10.1.2",
-    "react": "^15.4.2",
+    "nyc": "^10.2.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-addons-perf": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
-    "snazzy": "^6.0.0",
-    "standard": "^9.0.2"
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.1.0 < 16",
@@ -88,18 +89,18 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.0",
-    "flatpickr": "^2.4.6",
-    "google-map-react": "^0.23.0",
+    "flatpickr": "^2.5.1",
+    "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
     "ismobilejs": "^0.4.1",
     "nouislider": "^9.2.0",
     "query-string": "^4.3.2",
     "ramda": "^0.23.0",
-    "react-list": "^0.8.4",
-    "react-onclickoutside": "^5.10.0",
+    "react-list": "^0.8.5",
+    "react-onclickoutside": "^5.11.1",
     "react-responsive": "^1.2.7",
-    "redux-logger": "^2.8.2",
+    "redux-logger": "^3.0.1",
     "xss": "^0.3.3",
     "xss-filters": "^1.2.7"
   },
