--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
