--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -48,31 +48,31 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.24.1",
     "chokidar": "^1.7.0",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.1",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
+    "eslint": "3.19.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react": "^7.1.0",
     "expect": "^1.20.2",
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
     "isparta": "^4.0.0",
-    "mocha": "^3.4.1",
-    "nyc": "^10.3.2",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.2",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
     "react-addons-perf": "^15.4.2",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
-    "react-test-renderer": "^15.5.4",
-    "redux": "^3.6.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "redux": "^3.7.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
@@ -89,15 +89,16 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "flatpickr": "^2.6.3",
+    "flatpickr": "^3.0.5",
     "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
     "ismobilejs": "^0.4.1",
     "jsdom": "^11.0.0",
     "nouislider": "^10.0.0",
+    "prop-types": "^15.5.10",
     "query-string": "^4.3.4",
-    "ramda": "^0.24.0",
+    "ramda": "^0.24.1",
     "react-list": "^0.8.6",
     "react-onclickoutside": "^5.11.1",
     "react-responsive": "^1.3.0",
