--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -50,7 +50,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.0",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.24.1",
@@ -89,7 +89,7 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "flatpickr": "^3.0.5",
+    "flatpickr": "^3.0.5-1",
     "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
