--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -73,6 +73,7 @@
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.0",
+    "react-redux": "^4.4.5",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
@@ -103,7 +104,6 @@
     "react-onclickoutside": "^5.11.1",
     "react-responsive": "^1.3.0",
     "redux-logger": "^3.0.6",
-    "xss": "^0.3.3",
     "xss-filters": "^1.2.7"
   },
   "pre-commit": [
