--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -71,9 +71,9 @@
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-redux": "^4.4.5",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.0",
-    "react-redux": "^4.4.5",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
@@ -90,18 +90,19 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "flatpickr": "^3.0.5-1",
     "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "invariant": "^2.2.2",
     "ismobilejs": "^0.4.1",
     "jsdom": "^11.0.0",
     "nouislider": "^10.0.0",
+    "pikaday": "^1.6.1",
     "prop-types": "^15.5.10",
     "query-string": "^4.3.4",
     "ramda": "^0.24.1",
     "react-list": "^0.8.6",
     "react-onclickoutside": "^5.11.1",
+    "react-pikaday-component": "^2.1.4",
     "react-responsive": "^1.3.0",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
