--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -77,7 +77,8 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
-    "standard": "^10.0.2"
+    "standard": "^10.0.2",
+    "jsdom": "^11.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.1.0 < 16",
@@ -90,11 +91,8 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
-    "invariant": "^2.2.2",
     "ismobilejs": "^0.4.1",
-    "jsdom": "^11.0.0",
     "nouislider": "^10.0.0",
     "pikaday": "^1.6.1",
     "prop-types": "^15.5.10",
