--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
+  presets: ["es2015", "react", "stage-0"],
   plugins: [
+    'transform-runtime',
     'babel-plugin-ramda',
     'babel-plugin-transform-es3-member-expression-literals',
     'babel-plugin-transform-es3-property-literals',
