--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -51,6 +51,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.24.1",
@@ -64,6 +65,7 @@
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
     "isparta": "^4.0.0",
+    "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
     "nyc": "^11.0.2",
     "prop-types": "^15.5.10",
@@ -77,8 +79,7 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
-    "standard": "^10.0.2",
-    "jsdom": "^11.0.0"
+    "standard": "^10.0.2"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.1.0 < 16",
@@ -88,6 +89,7 @@
     "redux-thunk": "^2.1.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
