--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -50,14 +50,14 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.0",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.24.1",
     "chokidar": "^1.7.0",
     "cross-env": "^5.0.1",
-    "enzyme": "^2.8.2",
+    "enzyme": "^2.9.1",
     "eslint": "3.19.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
@@ -67,15 +67,15 @@
     "isparta": "^4.0.0",
     "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
-    "nyc": "^11.0.2",
+    "nyc": "^11.0.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.5",
     "react-test-renderer": "^15.6.1",
-    "redux": "^3.7.0",
+    "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
@@ -93,16 +93,15 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "hoist-non-react-statics": "^1.2.0",
+    "hoist-non-react-statics": "^2.0.0",
     "ismobilejs": "^0.4.1",
     "nouislider": "^10.0.0",
-    "pikaday": "^1.6.1",
     "prop-types": "^15.5.10",
     "query-string": "^4.3.4",
     "ramda": "^0.24.1",
     "react-list": "^0.8.6",
     "react-onclickoutside": "^5.11.1",
-    "react-pikaday-component": "^2.1.4",
+    "react-pikaday-datepicker": "^3.0.0",
     "react-responsive": "^1.3.0",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
