--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -58,7 +58,7 @@
     "chokidar": "^1.7.0",
     "cross-env": "^5.0.1",
     "enzyme": "^2.9.1",
-    "eslint": "3.19.0",
+    "eslint": "^4.1.1",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
     "expect": "^1.20.2",
@@ -100,7 +100,7 @@
     "query-string": "^4.3.4",
     "ramda": "^0.24.1",
     "react-list": "^0.8.6",
-    "react-onclickoutside": "^5.11.1",
+    "react-onclickoutside": "^6.1.1",
     "react-pikaday-datepicker": "^3.0.0",
     "react-responsive": "^1.3.0",
     "redux-logger": "^3.0.6",
