Fixed lint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,16 +11,16 @@
   "rules": {
     "quotes": [2, "single"],
     "strict": [2, "never"],
-    "babel/generator-star-spacing": 1,
-    "babel/new-cap": 1,
-    "babel/object-shorthand": 1,
-    "babel/arrow-parens": 1,
-    "babel/no-await-in-loop": 1,
+    "generator-star-spacing": 1,
+    "new-cap": 1,
+    "object-shorthand": 1,
+    "arrow-parens": 1,
+    "no-await-in-loop": 1,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
-    "react/wrap-multilines": 2,
+    "react/jsx-wrap-multilines": 2,
     "react/jsx-no-bind": 2,
     "react/prefer-stateless-function": 2
   },
