--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -50,7 +50,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.3",
@@ -58,28 +58,28 @@
     "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
     "cross-env": "^5.0.5",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.0.0",
     "eslint": "3.19.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-react": "^7.2.0",
-    "expect": "^1.20.2",
+    "eslint-plugin-react": "^7.4.0",
+    "expect": "1.20.2",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.4",
+    "express": "^4.15.5",
     "isparta": "^4.0.0",
-    "jsdom": "^11.1.0",
-    "mocha": "^3.5.0",
-    "nyc": "^11.1.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
     "react-addons-perf": "^15.4.2",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.6.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "retire": "^1.4.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
@@ -95,14 +95,14 @@
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.1",
-    "hoist-non-react-statics": "^2.2.2",
+    "hoist-non-react-statics": "^2.3.1",
     "ismobilejs": "^0.4.1",
     "nouislider": "^10.1.0",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "ramda": "^0.24.1",
-    "react-list": "^0.8.6",
-    "react-onclickoutside": "^6.4.0",
+    "react-list": "^0.8.7",
+    "react-onclickoutside": "^6.5.0",
     "react-pikaday-datepicker": "^3.0.0",
     "react-responsive": "^1.3.4",
     "redux-logger": "^3.0.6",
