Added response time

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -54,21 +54,21 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-olasearch": "^1.0.3",
+    "babel-preset-olasearch": "^1.0.4",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
     "cross-env": "^5.0.5",
-    "enzyme": "^3.0.0",
-    "eslint": "3.19.0",
+    "enzyme": "^3.1.0",
+    "eslint": "^4.8.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.4.0",
-    "expect": "1.20.2",
+    "expect": "^1.20.2",
     "expose-loader": "^0.7.3",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "isparta": "^4.0.0",
     "jsdom": "^11.3.0",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
@@ -101,11 +101,11 @@
     "nouislider": "^10.1.0",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
-    "ramda": "^0.24.1",
+    "ramda": "^0.25.0",
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.6.0",
     "react-pikaday-datepicker": "3.0.1",
-    "react-responsive": "^1.3.4",
+    "react-responsive": "^2.0.0",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
   },
