--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
-    "release": "cross-env NODE_ENV=production webpack --display-optimization-bailout --config webpack.release.js",
+    "release": "cross-env NODE_ENV=production webpack --display-optimization-bailout --config webpack.release.js && gulp build",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "BABEL_ENV=production mocha --compilers js:babel-register --recursive --require ./test/setup.js",
@@ -71,6 +71,10 @@
     "expect": "^1.20.2",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jsmin": "^0.1.5",
+    "gulp-rename": "^1.2.2",
     "isparta": "^4.0.0",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
