--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
-    "release": "cross-env NODE_ENV=production webpack --display-optimization-bailout --config webpack.release.js --json > stats.json && gulp build",
+    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "BABEL_ENV=production mocha --compilers js:babel-register --recursive --require ./test/setup.js",
@@ -59,7 +59,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
@@ -81,7 +81,7 @@
     "gulp-uglify": "^3.0.0",
     "isparta": "^4.0.0",
     "jsdom": "^11.5.1",
-    "lint-staged": "^5.0.0",
+    "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
     "prettier-standard": "^7.0.3",
@@ -97,7 +97,8 @@
     "s3-deploy": "^0.8.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
-    "webpack": "^3.9.0",
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "webpack": "^3.9.1",
     "webpack-bundle-size-analyzer": "^2.7.0",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0"
@@ -119,7 +120,7 @@
     "nouislider": "^10.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
-    "ramda": "^0.25.0",
+    "rambda": "^1.0.5",
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.7.0",
     "react-pikaday-datepicker": "3.0.1",
