Updated test spec

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
+    "watch2": "BABEL_ENV=production babel --watch ./node_modules/rambda/modules --out-dir ./node_modules/rambda/modules2",
     "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
